# odoosys

./: .gitignore  ARQUITECTURA_DESKTOP_LIGERA.md  ARQUITECTURA_OPEN_SOURCE_DGII_ECF.md  ESTADO_ACTUAL_PRODUCCION_DGII.md  GUIA_PASO_A_PASO_ECF_DGII.md  HANDOFF_PROMPT.md  INTEGRACIONES_ODDO_DGII.md  PILOTO_HERMANA_PRODUCCION.md  PLAN_COMERCIAL_QR_ODDO_DGII.md  PROMPT_CLAUDE_FABLE5_PRODUCTO_FINAL.md  README.md  install-and-run-local.cmd  install-and-run-local.ps1  install-config.example.json  install-dgii-suite.ps1  start-local.cmd  start-local.ps1  stop-local.cmd  stop-local.ps1
desktop-app/: README.md  desktop-app.config.example.json  install-erp-desktop.ps1  run-gateway-supervised.ps1  start-erp-desktop.ps1  stop-erp-desktop.ps1
desktop-electron/: README.md  main.mjs  package-lock.json  package.json  preload.mjs
desktop-node-local/: README.md  install-shortcut.ps1  start-dgii-node-desktop.ps1  stop-dgii-node-desktop.ps1  test-dgii-node-desktop.ps1
desktop-tauri/: README.md  package-lock.json  package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: main.rs
dgii-ecf-check/: package-lock.json
ecf-endpoints-service/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
odoo-dgii-stack/: README.md  docker-compose.yml
windows-native/: README.md  complete-native-elevated.ps1  install-native.ps1  install-shortcuts-native.ps1  native-config.example.json  native-config.json  run-complete-native-elevated.cmd  start-native.ps1  (+5 more)
(+107 files in other folders)
